# rollup-bsn-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  GITHUB_ISSUE_8_RESOLUTION_SUMMARY.md  LICENSE  MIGRATION.md  PRUNING.md  README.md  SPEC.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: changelog-reminder.yml  deploy.yml  local-tests.yml  wasm-tests-full.yml
artifacts/: checksums.txt  finality.wasm
contracts/finality/: Cargo.toml
contracts/finality/schema/: finality.json
contracts/finality/schema/raw/: execute.json  instantiate.json  migrate.json  query.json  response_to_block_voters.json  response_to_config.json  response_to_first_pub_rand_commit.json  response_to_last_pub_rand_commit.json  response_to_list_pub_rand_commit.json
contracts/finality/src/: contract.rs  custom_queries.rs  error.rs  lib.rs  msg.rs  queries.rs  signing_context.rs  utils.rs  validation.rs
contracts/finality/src/exec/: admin.rs  allowlist.rs  config.rs  finality.rs  finality.rs.new  mod.rs  public_randomness.rs
contracts/finality/src/state/: allowlist.rs  config.rs  evidence.rs  finality.rs  mod.rs  pruning.rs  public_randomness.rs  rate_limiting.rs
contracts/finality/src/testutil/: datagen.rs
contracts/finality/tests/: integration.rs
contracts/op-finality-gadget/: Cargo.toml
contracts/op-finality-gadget/schema/: op-finality-gadget.json
contracts/op-finality-gadget/src/exec/: finality.rs
docs/: CONFIG.md  CONTRACT_MANAGMENT.md  SPEC.md  contract-interaction.md  contract-management.md  contract-managment.md  deployment-integration.md  reward-distribution.md  rollup-bsn-contract-deployment-integration.md  rollup_bsn_contract_guide.md
e2e/: Makefile  datagen.go  go.mod  go.sum  main_test.go  types.go  wasm_utils.go
scripts/: e2e_test.sh
