[workspace]
members  = ["contracts/*"]
resolver = "2"

[workspace.package]
edition    = "2021"
version    = "0.2.0"
license    = "BSL-1.1"
repository = "https://github.com/babylonlabs-io/rollup-bsn-contracts"
authors    = ["Babylon Labs Ltd. <admin@babylonlabs.io>"]
publish    = false

[workspace.metadata.scripts]
gen-schema      = "./scripts/schema.sh"
optimize        = "./scripts/optimizer.sh"
precommit       = "./scripts/precommit.sh"
lint            = "./scripts/lint.sh"
fix-lint        = "./scripts/fix_lint.sh"
integration     = "./scripts/integration_test.sh"
e2e             = "./scripts/e2e_test.sh"

[workspace.dependencies]
anyhow           = "1.0.82"
anybuf           = { version = "0.5.0" }
babylon-bindings = { git = "https://github.com/babylonlabs-io/bindings", tag = "v0.2.0" }
babylon-merkle   = { git = "https://github.com/babylonlabs-io/cosmos-bsn-contracts" }
cosmwasm-schema  = "2.1.4"
cosmwasm-std     = { version = "2.1.4", default-features = false, features = [
    "std",
    "cosmwasm_2_0",
] }
cw-controllers   = "2.0.0"
cw-multi-test    = { version = "2.0.1", features = [ "staking", "cosmwasm_1_1", "cosmwasm_2_0" ] }
cw-storage-plus  = "2.0.0"
derivative       = "2"
digest           = "0.10"
eots             = { git = "https://github.com/babylonlabs-io/cosmos-bsn-contracts" }
hex              = "0.4.3"
k256             = { version = "0.13.1", default-features = false, features = ["schnorr"] }
thiserror        = "1.0.40"

# dev deps
babylon-test-utils = { git = "https://github.com/babylonlabs-io/cosmos-bsn-contracts" }
cosmwasm-vm        = { version = "2.1.4", default-features = false, features = ["iterator", "stargate"] }
rand               = "0.9.1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
lto              = true
panic            = 'abort'
rpath            = false
opt-level        = 3
overflow-checks  = true
incremental      = false
