[package]
name = "finality"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Babylon Labs, Ltd. <admin@babylonlabs.io>", "Snapchain Inc. <info@snapchain.dev>"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
test = false

[features]
library = []

[dependencies]
anybuf           = { workspace = true }
hex              = { workspace = true }
k256             = { workspace = true }
thiserror        = { workspace = true }

cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-controllers   = { workspace = true }
cw-storage-plus  = { workspace = true }

babylon-bindings = { workspace = true }
babylon-merkle   = { workspace = true }
eots             = { workspace = true }

[dev-dependencies]
anyhow                = { workspace = true }
derivative            = { workspace = true }

cosmwasm-vm           = { workspace = true }
cw-multi-test         = { workspace = true }

babylon-test-utils    = { workspace = true }
